# practice-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: character_input_and_output.c  for_statement.c  hello_world.c  symbolic_constant.c  variable_and_arithmetic_expression.c
