cmake_minimum_required(VERSION 3.18)
project(practice-c LANGUAGES C)

add_executable(hello-world src/hello_world.c)
add_executable(variable-and-arithmetic-expression src/variable_and_arithmetic_expression.c)
add_executable(for-statement src/for_statement.c)
add_executable(symbolic-constant src/symbolic_constant.c)
add_executable(character-input-and-output src/character_input_and_output.c)